--- a/index.html
+++ b/index.html
@@ -890,7 +890,7 @@
               <h3>Restaurantly</h3>
               <p>
                 A108 Adam Street <br>
-                NY 535022, PPakistan<br><br>
+                NY 535022, Pakistan<br><br>
                 <strong>Phone:</strong> +92 3158361486<br>
                 <strong>Email:</strong> info@example.com<br>
               </p>
